--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -14,14 +17,14 @@
 
 <!--banner start--------------------------->
     <section class="banner">
-        <div class="banner-content">
-            <h1>Food Network® Coffee, Espresso Drinks, Bakery Sweets & More</h1>
+        <div class="banner-item">
+            <h1><span class="base-color">Food Network</span> ® Coffee, Espresso Drinks, Bakery Sweets & More</h1>
             <p>Good is brewing with our delicious Food Network® drinks and bakery sweets. Browse the categories for more information on topics such as our tasty coffee and espresso drinks, Food Network® FN-Cup® pods and coffee grounds or our Food Network® Rewards program.*</p>
-            <a href="">Order Now</a>
+            <a class="banner-btn" href="">Order Now</a>
         </div>
 
-        <div class="banner-img">
-            <img src="images/female/banner-img.png" alt="">
+        <div class="banner-item">
+            <img  src="images/female/banner-img.png" alt="">
         </div>
     </section>
 <!--banner end----------------------------->
