about section created and designed

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <!--navbar end----------------------------->
 
 <!--banner start--------------------------->
-    <section class="banner">
+    <section class="banner divDesign">
         <div class="banner-item">
             <h1><span class="base-color">Food Network</span> ® Coffee, Espresso Drinks, Bakery Sweets & More</h1>
             <p>Good is brewing with our delicious Food Network® drinks and bakery sweets. Browse the categories for more information on topics such as our tasty coffee and espresso drinks, Food Network® FN-Cup® pods and coffee grounds or our Food Network® Rewards program.*</p>
-            <a class="banner-btn" href="">Order Now</a>
+            <a class="fn-btn" href="">Order Now</a>
         </div>
 
         <div class="banner-item">
@@ -29,7 +29,19 @@
     </section>
 <!--banner end----------------------------->
     
+<!--about me start------------------------->
+    <section  class="aboutUs divDesign">
+        <div class="banner-item">
+            <img class="aboutImg" src="images/female/Person Image.png" alt="">
+        </div>
 
+        <div class="banner-item">
+            <h2>About Us</h2>
+            <p>We’re passionate about our food. That’s why we’re committed to always evolving what matters to you.We're dedicated to improving the way we prepare our quality food and the ingredients that go into it.</p>
+            <a class="fn-btn" href="">About Us</a>
+        </div>
+    </section>
+<!--about me end--------------------------->
 
 
 <!--Contact Us start----------------------->
