recipe section added

--- a/index.html
+++ b/index.html
@@ -43,6 +43,36 @@
     </section>
 <!--about me end--------------------------->
 
+<!--Our recipies start--------------------->
+    <section id="recipe">
+        <div class="recipe-content">
+            <h2>Our Recipies</h2>
+            <p>You can feel good about the variety of menu items that you can choose from at our restaurants, so check out some of the quality options we have for all ages.</p>
+        </div>
+
+        <div class="divDesign">
+            <div class="recipe-item">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h2>Eggs</h2>
+                <p>Hear that? That’s the satisfying sound of a freshly-cracked egg being prepared for our Egg fnuffin®. And, we’re committed to serving 100% cage-free eggs by 2025, another great reason to enjoy our eggs.</p>
+            </div>
+
+            <div class="recipe-item">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h2>Beef</h2>
+                <p>Our fnbeef are 100% real beef patties that have no fillers, additives or preservatives. And, our special searing method makes them hot and juicy. </p>
+            </div>
+
+            <div class="recipe-item">
+                <img src="images/food/Project Cover.png" alt="">
+                <h2>Soup</h2>
+                <p>Vegan Pumpkin Leek Soup with Smoked Paprika and Homemade Spelt Crackers</p>
+            </div>
+        </div>
+    </section>
+<!--Our recipies end----------------------->
+
+
 
 <!--Contact Us start----------------------->
 <!--Contact Us end0------------------------>
