footer section added

--- a/index.html
+++ b/index.html
@@ -76,5 +76,12 @@
 
 <!--Contact Us start----------------------->
 <!--Contact Us end0------------------------>
+
+<!--footer part start---------------------->
+    <footer class="footerDesign">
+        <h2><span class="base-color"> Food</span> Network</h2>
+        <p>© 2020 - 2021 Food Network. All Rights Reserved</p>
+    </footer>
+<!--footer part end------------------------>
 </body>
 </html>
