menu section added

--- a/index.html
+++ b/index.html
@@ -8,11 +8,28 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
 <!--navbar start--------------------------->
+    <section class="menu">
+        <nav class="nav-items">
+
+            <a class="logo" href="#"><span class="base-color"> Food</span> <span class="logo-p2">Network</span></a>
+
+            <ul>
+                <li><a class="menu-bar"href="#">Our Menu</a></li>
+                <li><a href="#">Food-Net</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Our Recipe</a></li>
+                <li><a href="#">Exclusive Deals</a></li>
+            </ul>
+
+            <a class="menu-btn" href="#">Order Now</a>
+        </nav>
+    </section>
 <!--navbar end----------------------------->
 
 <!--banner start--------------------------->
@@ -20,7 +37,7 @@
         <div class="banner-item">
             <h1><span class="base-color">Food Network</span> ® Coffee, Espresso Drinks, Bakery Sweets & More</h1>
             <p>Good is brewing with our delicious Food Network® drinks and bakery sweets. Browse the categories for more information on topics such as our tasty coffee and espresso drinks, Food Network® FN-Cup® pods and coffee grounds or our Food Network® Rewards program.*</p>
-            <a class="fn-btn" href="">Order Now</a>
+            <a class="fn-btn" href="">Learn More</a>
         </div>
 
         <div class="banner-item">
