exclusive deal section added

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Monoton&family=Poppins:wght@400;500;700&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Monoton&family=Poppins:wght@400;500;700&family=Shadows+Into+Light&family=Spartan&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -74,7 +74,7 @@
             <div class="recipe-item">
                 <img src="images/food/Project Cover.jpg" alt="">
                 <h2>Eggs</h2>
-                <p>Hear that? That’s the satisfying sound of a freshly-cracked egg being prepared for our Egg fnuffin®. And, we’re committed to serving 100% cage-free eggs by 2025, another great reason to enjoy our eggs.</p>
+                <p>Hear that? That’s the satisfying sound of a freshly-cracked egg being prepared for our Egg fnuffin®.</p>
             </div>
 
             <div class="recipe-item">
@@ -91,6 +91,28 @@
         </div>
     </section>
 <!--Our recipies end----------------------->
+
+<!--Exclusive deals start--------------------->
+<section id="ex-deals">
+    <div class="ex-deals-content">
+        <h2>Exclusive Deals</h2>
+        <p>Download our App on your phone and register in order to earn a free order of our different foods.</p>
+    </div>
+
+    <div class="divDesign">
+        <div id="exDeals" class="ex-deals-item">
+            <h3>Free Large Fries with App Download</h3>
+            <p>Download our App on your phone and register in order to earn a free order of large Fries.</p>
+            
+            <a class="fn-btn" href="">Download App</a><br>
+            <p class="min-text">*Valid 1x thru 12/31/21 for first time App users. FN App download and registration required. May take up to 48 hours to appear in your deals. Mobile Order & Pay available at participating FoodNetwork’s. No purchase necessary. </p>
+        </div>
+        <div class="ex-deals-item">
+            <img class="dealsImg" src="images/shapes/french fry.jpg" alt="">
+        </div>
+    </div>
+</section>
+<!--Exclusive deals end----------------------->
 
 
 
