some other sections added

--- a/index.html
+++ b/index.html
@@ -75,18 +75,21 @@
                 <img src="images/food/Project Cover.jpg" alt="">
                 <h2>Eggs</h2>
                 <p>Hear that? That’s the satisfying sound of a freshly-cracked egg being prepared for our Egg fnuffin®.</p>
+                <a class="recipe-btn" href="">Learn More</a>
             </div>
 
             <div class="recipe-item">
                 <img src="images/food/Project Cover1.jpg" alt="">
                 <h2>Beef</h2>
-                <p>Our fnbeef are 100% real beef patties that have no fillers, additives or preservatives. And, our special searing method makes them hot and juicy. </p>
+                <p>Our fnbeef are 100% real beef patties that have no fillers, additives or preservatives. </p>
+                <a class="recipe-btn" href="">Learn More</a>
             </div>
 
             <div class="recipe-item">
                 <img src="images/food/Project Cover.png" alt="">
                 <h2>Soup</h2>
                 <p>Vegan Pumpkin Leek Soup with Smoked Paprika and Homemade Spelt Crackers</p>
+                <a class="recipe-btn" href="">Learn More</a>
             </div>
         </div>
     </section>
@@ -117,12 +120,55 @@
 
 
 <!--Contact Us start----------------------->
+    <section class="contact">
+        <div class="contactDetails">
+            <div class="contact-items">
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Our History</a></li>
+                    <li><a href="#">Our Leadership</a></li>
+                    <li><a href="#">News and Notifications</a></li>
+                </ul>
+            </div>
+            <div class="contact-items">
+                <ul>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Education Opportunities</a></li>
+                    <li><a href="#">Meet our People and Staff & Management</a></li>
+                    <li><a href="#">Work with us</a></li>
+                    <li><a href="#">Apply Now</a></li>
+                </ul>
+            </div>
+            <div class="contact-items">
+                <ul>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">WiFi</a></li>
+                    <li><a href="">Mobile order & Pay </a></li>
+                    <li><a href="">FN Delivery</a></li>
+                    <li><a href="">Family Fun Hub</a></li>
+                </ul>
+            </div>
+        
+            <div class="contact-items">
+                <ul>
+                    
+                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">Donations</a></li>
+                    <li><a href="">Employment</a></li>
+                    <li><a href="">Restaurant Feedback</a></li>
+                    <li><a href="">RFrequently asked Questiom</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
 <!--Contact Us end0------------------------>
 
 <!--footer part start---------------------->
     <footer class="footerDesign">
         <h2><span class="base-color"> Food</span> Network</h2>
-        <p>© 2020 - 2021 Food Network. All Rights Reserved</p>
+        <h3>We do it all for You</h3>
+        <p> Privacy (Updated) &nbsp&nbsp&nbsp&nbsp Terms & Conditions &nbsp&nbsp&nbsp&nbsp Accessibility&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp &nbsp&nbsp&nbsp&nbsp &nbsp&nbsp&nbsp&nbsp &nbsp &nbsp© 2020 - 2021 Food Network. All Rights Reserved</p>
     </footer>
 <!--footer part end------------------------>
 </body>
