media section added

--- a/index.html
+++ b/index.html
@@ -117,9 +117,25 @@
 </section>
 <!--Exclusive deals end----------------------->
 
-
-
-<!--Contact Us start----------------------->
+<!--social media start------------------------>
+    <section class="socialMedia">
+        <div class="media-items">
+            <div class="media-content">
+                <h2>700k</h2>
+                <h4>Youtube Subscribers</h4>
+            </div>
+            <div class="media-content">
+                <h2>2.4m</h2>
+                <h4>Instagram Followers</h4>
+            </div>
+            <div class="media-content">
+                <h2>100k</h2>
+                <h4>Dribble Shot Likes</h4>
+            </div>
+        </div>
+    </section>
+<!--social media end-------------------------->
+<!--Contact Us start-------------------------->
     <section class="contact">
         <div class="contactDetails">
             <div class="contact-items">
@@ -163,6 +179,8 @@
     </section>
 
 <!--Contact Us end0------------------------>
+
+
 
 <!--footer part start---------------------->
     <footer class="footerDesign">
